<resources>
    <string name="app_name">Calculator-Converter</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="decimal_point">.</string>
    <string name="sign">+/-</string>
    <string name="exponent">^</string>
    <string name="equals">=</string>
    <string name="clear">C</string>
    <string name="backspace">C</string>


    <string name="display">0</string>

    <string name="from_currency">From</string>
    <string name="to_currency">To</string>

    <string name="convert">Convert</string>



    <string-array name="currency_array">
        <item>GBP</item>
        <item>USD</item>
    </string-array>


</resources>