<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkGray">


    <Button
        android:id="@+id/btnConvert"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="112dp"
        android:layout_height="58dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/ripple_effect"
        android:text="@string/convert"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/backspace"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="37dp"
        android:layout_height="41dp"
        android:background="@drawable/ripple_effect_2"
        android:foreground="@android:drawable/ic_input_delete"
        android:onClick="backspaceButton"
        app:icon="@android:drawable/ic_input_delete"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConvert"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/swapBTN"
        android:layout_width="36dp"
        android:layout_height="28dp"


        android:layout_marginStart="148dp"

        android:layout_marginTop="56dp"
        android:background="@drawable/action_buttons"
        android:foreground="@drawable/swap2"
        app:icon="@drawable/swap"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toStartOf="@+id/spToCurrency"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toEndOf="@+id/spFromCurrency"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_bias="0.244" />

    <EditText
        android:id="@+id/result"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:minLines="1"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textColorHighlight="#512DA8"
        android:textColorLink="@color/purple_500"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/btnConvert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <Spinner
        android:id="@+id/spToCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:padding="15dp"
        android:popupBackground="@color/cardview_dark_background"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toStartOf="@+id/btnConvert"
        app:layout_constraintTop_toBottomOf="@+id/textTo"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spFromCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="15dp"
        android:popupBackground="@color/cardview_dark_background"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/textFrom"
        app:layout_constraintVertical_bias="0.011"
        tools:layout_editor_absoluteX="57dp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/action_buttons"
                android:onClick="clearButton"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/sign"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/action_buttons"
                android:onClick="signButton"
                android:text="@string/sign"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/exponent"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/action_buttons"
                android:onClick="exponentButton"
                android:text="@string/exponent"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/action_buttons"
                android:onClick="divideButton"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="sevenButton"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="eightButton"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="nineButton"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/action_buttons"
                android:onClick="multiplyButton"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="fourButton"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="fiveButton"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="sixButton"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/subtract"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/action_buttons"
                android:onClick="subtractButton"
                android:text="@string/subtract"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="oneButton"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="twoButton"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="threeButton"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/action_buttons"
                android:onClick="addButton"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/decimal_point"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="decimal_pointButton"
                android:text="@string/decimal_point"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="zeroButton"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/equals"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="2"
                android:background="@drawable/equals_button"
                android:onClick="equalsButton"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/to_currency"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="@+id/spToCurrency"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <TextView
        android:id="@+id/textFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:text="@string/from_currency"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/textTo"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />


</androidx.constraintlayout.widget.ConstraintLayout>